[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hsm-client"
version = "0.1.0"
description = "Minimal Python PKCS#11 client starter for HSM-backed symmetric cryptography."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "asn1crypto>=1.5.1",
  "python-pkcs11>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration tests that require SoftHSM",
]
